Firefox layout issues

--- a/less/optionspanel.less
+++ b/less/optionspanel.less
@@ -25,8 +25,8 @@
 }
 
 .highed-optionspanel-body{            
-  width: 82%;
-  max-width: 1062px;
+  width: 84%;
+  max-width: 1070px;
   height: 39px;
   margin-left: auto;
   margin-right: auto;
