--- a/less/widget-fields.less
+++ b/less/widget-fields.less
@@ -256,6 +256,7 @@
   overflow: hidden;
   height: 32px;
   padding: 0px !important;
+  vertical-align: bottom;
 }
 
 .highed-annotation-container.active {
